<resources>
    <string name="app_name">Liquidator</string>
    <string name="kill_victim">Kill victim</string>
    <string name="i_am_corpse">I am corpse</string>

    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_check">Confirm password</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_account">Already have account?</string>
    <string name="do_not_have_account">Don\'t have account?Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="create_game">Create game</string>
    <string name="join_game">Join game</string>
    <string name="game_name">Name of game</string>
    <string name="start_game">Start game</string>
    <string name="finish_game">Finish game</string>
    <string name="user_verified">User verified</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="delete_game"><u>Delete game</u></string>
    <string name="log_out">Log out</string>
    <string name="game_code">Game code</string>
    <string name="text_wait_accepted">You are not accepted to game yet\n Please wait response of host </string>
    <string name="text_wait_started">You are accepted to game,\n but game is not started yet\n Please wait the start of game </string>
    <string name="join_game_refresh">Please click refresh button\n or \n pull down \n to check response</string>
    <string name="refresh">refresh</string>
    <string name="server_error">Sorry,some server error occurred</string>
    <string name="join_game_rejected_dialog_message">You request to join game rejected</string>
    <string name="alive">Alive</string>
    <string name="died">Died</string>
    <string name="profile">Profile</string>
    <string name="user_name">Name:</string>
    <string name="user_surname">Surname:</string>
    <string name="user_email">Email</string>
    <string name="show_photo">Show photo</string>
    <string name="set_photo">Set photo</string>
    <string name="profile_photo">Profile photo</string>
    <string name="profile_photo_transition">profile_photo_transition</string>
    <string name="on_permissions_cancelled">This application needs these permissions. \n You must provide them in the settings of the application to continue.</string>
    <string name="victim_title">Your victim:</string>
    <string name="verify_user">Verify</string>

</resources>
