<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_above="@id/inputsContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"


                app:layout_constraintVertical_bias="0.338" />
        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:id="@+id/inputsContainer"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">
            <EditText

                android:id="@+id/nameEt"
                style="@style/signUpEdittext"
                android:hint="@string/name"
                />
            <EditText
                android:id="@+id/surnameEt"
                style="@style/signUpEdittext"
                android:hint="@string/surname"
               />
            <EditText
                android:id="@+id/emailEt"
                style="@style/signUpEdittext"
                android:hint="@string/email"
               />
            <EditText
                android:id="@+id/passwordEt"
                style="@style/signUpEdittext"
                android:hint="@string/password"
              />
            <EditText
                android:id="@+id/passwordEt1"
                style="@style/signUpEdittext"
                android:hint="@string/password_check"
           />

        </LinearLayout>
        <android.support.constraint.ConstraintLayout
            android:id="@+id/footer"
            android:layout_below="@id/inputsContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sign_up_btn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.204"
                android:text="@string/create_account"
                android:textAllCaps="false"

                />

            <TextView
                android:id="@+id/link_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/already_have_account"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.811" />
        </android.support.constraint.ConstraintLayout>



    </RelativeLayout>
    </RelativeLayout>