<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/title_container_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView

                android:id="@+id/title_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/sign_in"
                style="@style/titleLogin"
                />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/container_sign_in_inputs"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_container_sign_in"
            >
            <EditText
                android:id="@+id/email_sign_in"
                style="@style/signUpEdittext"
                android:hint="@string/email"
                />
            <EditText
                android:id="@+id/passwordEt_sign_in"
                style="@style/signUpEdittext"
                android:hint="@string/password"
                />
            <Button
                android:id="@+id/sign_in_btn"
                android:layout_width="@dimen/login_input_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/login"
                android:textAllCaps="false"
                />
            <TextView
                android:id="@+id/link_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/do_not_have_account"
                android:textSize="@dimen/link_login_text_size"
          />
        </LinearLayout>
    </RelativeLayout>



</ScrollView>