<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/refreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:id="@+id/game_info_included"
            layout="@layout/layout_game_info"
            />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/usersRv"
            android:layout_below="@+id/game_info_included"
            android:layout_above="@id/startButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false">

        </android.support.v7.widget.RecyclerView>
        <Button
            android:id="@+id/startButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/deleteGameBtn"
            android:text="@string/start_game"/>
        <Button
            android:id="@+id/finishButton"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/finish_game"/>
        <TextView
            android:id="@+id/deleteGameBtn"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/delete_game"/>




    </RelativeLayout>
</android.support.v4.widget.SwipeRefreshLayout>