<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout android:id="@+id/refreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:id="@+id/refreshLayoutChild"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/informTvContainer">
            <include
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_centerInParent="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/layout_game_info"
                />
        </RelativeLayout>
        <android.support.v7.widget.CardView
            android:id="@+id/informTvContainer"
            style="@style/CardView.Dark"
            app:cardElevation="30dp"
            app:cardCornerRadius="10dp"
            android:layout_margin="10dp"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/informTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="15dp"
                android:textSize="23sp"
                android:textStyle="bold"
                android:text="@string/text_wait_started"
                android:shadowColor="@android:color/black"
                android:shadowDx="7"
                android:shadowDy="7"
                android:shadowRadius="7"
                android:typeface="sans"
                />
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/refreshTv"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/informTvContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="15sp"
            android:text="@string/join_game_refresh"
            android:shadowColor="@android:color/black"
            android:shadowDx="7"
            android:shadowDy="7"
            android:shadowRadius="7"
            android:typeface="sans"
            />
        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/refreshButton"
            android:layout_below="@+id/refreshTv"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/refresh"/>


    </RelativeLayout>


</android.support.v4.widget.SwipeRefreshLayout>